Create dummy calculator

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div class="calculator">
+        <p class="display">67 + 23 = 84</p>
+        <button>Clear</button>
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button>0</button>
+    </div>
 </body>
 </html>
