Add calculator grid and styles

--- a/index.html
+++ b/index.html
@@ -1,26 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculator</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
+
 <body>
-    <div class="calculator">
-        <p class="display">67 + 23 = 84</p>
-        <button>Clear</button>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>0</button>
+    <div class="container">
+        <div class="calculator">
+            <div class="display">
+                <div class="prev-calc"></div>
+                <div class="current-calc">0</div>
+            </div>
+            <div class="buttons">
+                <button class="span-2">Clear</button>
+                <button class="span-2">Delete</button>
+
+                <button class="num-buttons">1</button>
+                <button class="num-buttons">2</button>
+                <button class="num-buttons">3</button>
+                <button class="op-buttons">÷</button>
+
+                <button class="num-buttons">4</button>
+                <button class="num-buttons">5</button>
+                <button class="num-buttons">6</button>
+                <button class="op-buttons">x</button>
+
+                <button class="num-buttons">7</button>
+                <button class="num-buttons">8</button>
+                <button class="num-buttons">9</button>
+                <button class="op-buttons">-</button>
+
+                <button class="num-buttons">.</button>
+                <button class="num-buttons">0</button>
+                <button class="op-buttons">=</button>
+                <button class="op-buttons">+</button>
+            </div>
+        </div>
     </div>
 </body>
+
 </html>
