Add word wrapping in calculator display

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="container">
         <div class="calculator">
             <div class="display">
-                <div class="prev-calc"></div>
-                <div class="current-calc">0</div>
+                <div class="prev-calc wrap-text"></div>
+                <div class="current-calc wrap-text">0</div>
             </div>
             <div class="buttons">
                 <button class="span-2">Clear</button>
