Create number button and operator button handlers

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
                 <button class="num-buttons">.</button>
                 <button class="num-buttons">0</button>
-                <button class="op-buttons">=</button>
+                <button class="equals-button">=</button>
                 <button class="op-buttons">+</button>
             </div>
         </div>
