Add clear button function

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="current-calc wrap-text">0</div>
             </div>
             <div class="buttons">
-                <button class="span-2">Clear</button>
+                <button class="span-2 clear-button">Clear</button>
                 <button class="span-2">Delete</button>
 
                 <button class="num-buttons">1</button>
