Create event listener for delete button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="buttons">
                 <button class="span-2 clear-button">Clear</button>
-                <button class="span-2">Delete</button>
+                <button class="span-2 delete-button">Delete</button>
 
                 <button class="num-buttons">1</button>
                 <button class="num-buttons">2</button>
@@ -35,7 +35,7 @@
                 <button class="num-buttons">9</button>
                 <button class="op-buttons">-</button>
 
-                <button class="num-buttons">.</button>
+                <button class="decimal-button">.</button>
                 <button class="num-buttons">0</button>
                 <button class="equals-button">=</button>
                 <button class="op-buttons">+</button>
