Change font, background colours

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <div class="current-calc wrap-text">0</div>
             </div>
             <div class="buttons">
-                <button class="span-2 clear-button">Clear</button>
-                <button class="span-2 delete-button">Delete</button>
+                <button class="span-2 clear-button">A/C</button>
+                <button class="span-2 delete-button">←</button>
 
                 <button class="num-buttons">1</button>
                 <button class="num-buttons">2</button>
